Footer ul spacing on mobile fix

--- a/public/scss/master.scss
+++ b/public/scss/master.scss
@@ -179,6 +179,7 @@ footer {
     height: 150px;
     display: inline-block;
     padding: 30px 0;
+    padding-bottom: 0;
   }
 
   li {
